[package]
name = "ruts"
description = "A middleware for tower sessions"
version = "0.5.4"
edition = "2021"
rust-version = "1.75.0"
authors = ["Jimmie Lovell <jimmieomlovell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jimmielovell/ruts"
keywords = ["sessions", "cookie", "ruts", "watfoe"]
categories = ["network-programming", "web-programming"]
repository = "https://github.com/jimmielovell/ruts"
documentation = "https://docs.rs/ruts"
readme = "README.md"

[features]
default = ["axum", "redis-store"]
axum = ["dep:axum-core"]
redis-store = ["dep:fred", "dep:rmp-serde"]

[dependencies]
axum-core = {  version = "0.5.0", optional = true }
base64 = "0.22.1"
cookie = "0.18.1"
fred = { version = "10.0.4", optional = true, features = ["i-hashes", "i-hexpire", "i-scripts", "sha-1"] }
http = "1.2.0"
parking_lot = { version = "0.12.3", features = ["serde"] }
pin-project-lite = "0.2.14"
rand = "0.9.0"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
axum = "0.8.1"

[[example]]
name = "axum"
path = "examples/axum.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[test]]
name = "core"
path = "tests/core.rs"

[[test]]
name = "axum"
path = "tests/axum.rs"

[[test]]
name = "redis"
path = "tests/redis.rs"
