[package]
name = "ruts"
description = "A middleware for tower sessions"
version = "0.6.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Jimmie Lovell <jimmieomlovell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jimmielovell/ruts"
keywords = ["sessions", "cookie", "ruts", "watfoe"]
categories = ["network-programming", "web-programming"]
repository = "https://github.com/jimmielovell/ruts"
documentation = "https://docs.rs/ruts"
readme = "README.md"

[features]
default = ["axum", "bincode"]
axum = ["dep:axum-core"]
bincode = ["dep:bincode"]
messagepack = ["dep:rmp-serde"]
postgres-store = ["dep:sqlx", "dep:time"]
redis-store = ["dep:fred"]
layered-store = ["redis-store", "postgres-store"]

[dependencies]
axum-core = {  version = "0.5.2", optional = true }
base64 = "0.22.1"
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
cookie = "0.18.1"
dashmap = "6.1.0"
fred = { version = "10.1.0", optional = true, features = ["i-hashes", "i-hexpire", "i-scripts", "sha-1"] }
http = "1.3.1"
parking_lot = { version = "0.12.4", features = ["serde"] }
pin-project-lite = "0.2.16"
rand = "0.9.2"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio-rustls", "time"] }
thiserror = "2.0.16"
time = { version = "0.3.43", optional = true }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
axum = "0.8.4"
serde_json = "1.0.143"

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum", "redis-store"]

[[test]]
name = "core"
path = "tests/core.rs"

[[test]]
name = "axum"
path = "tests/axum.rs"

[[test]]
name = "redis"
path = "tests/redis.rs"
required-features = ["redis-store"]

[[test]]
name = "postgres"
path = "tests/postgres.rs"
required-features = ["postgres-store"]

[[test]]
name = "layered"
path = "tests/layered.rs"
required-features = ["layered-store"]
