[package]
name = "ruts"
description = "A middleware for tower sessions"
version = "0.7.2"
edition = "2024"
rust-version = "1.85.0"
authors = ["Jimmie Lovell <jimmieomlovell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jimmielovell/ruts"
keywords = ["sessions", "cookie", "ruts", "watfoe"]
categories = ["network-programming", "web-programming"]
repository = "https://github.com/jimmielovell/ruts"
documentation = "https://docs.rs/ruts"
readme = "README.md"

[features]
default = ["axum", "bincode"]
axum = ["dep:axum-core"]
bincode = ["dep:bincode"]
messagepack = ["dep:rmp-serde"]
postgres-store = ["dep:sqlx"]
redis-store = ["dep:fred"]
layered-store = ["redis-store", "postgres-store"]

[dependencies]
axum-core = {  version = "0.5.2", optional = true }
base64 = "0.22.1"
bincode = { version = "3.0.0", optional = true, features = ["serde"] }
cookie = "0.18.1"
dashmap = "6.1.0"
fred = { version = "10.1.0", optional = true, features = ["i-hashes", "i-hexpire", "i-scripts", "sha-1"] }
http = "1.4.0"
parking_lot = { version = "0.12.5", features = ["serde"] }
pin-project-lite = "0.2.16"
rand = "0.9.2"
rmp-serde = { version = "1.3.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio-rustls", "time"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tracing = { version = "0.1.44", features = ["log"] }

[dev-dependencies]
axum = "0.8.8"

[[example]]
name = "redis"
path = "examples/redis.rs"
required-features = ["axum", "redis-store"]

[[example]]
name = "postgres"
path = "examples/postgres.rs"
required-features = ["axum", "postgres-store"]

[[example]]
name = "layered_store"
path = "examples/layered_store.rs"
required-features = ["axum", "layered-store"]

[[test]]
name = "axum"
path = "tests/axum.rs"
