[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
blake3 = { version = "1.5.0", features = ["rayon"] }
cookie = "0.18.0"
dashmap = { version = "5.5.3", features = ["serde"] }
http = "1.0.0"
parking_lot = "0.12.1"
pin-project-lite = "0.2.13"
rand = "0.8.5"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tracing = "0.1.40"
